[package]
name = "rtodo2-term"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version ="1.0.136", features = ["derive"] }
serde_json = "*"
clap = { version = "3.1.14", features = ["derive"] }
shellexpand = "*"
strum = { version = "0.25", features = ["derive"] }
